--- a/.github/workflows/core-build.yml
+++ b/.github/workflows/core-build.yml
@@ -35,6 +35,10 @@ jobs:
         run: source ./acore.sh install-deps
         env:
           CONTINUOUS_INTEGRATION: true
+      - name: Create conf/config.sh
+        run: source ./apps/ci/ci-conf.sh
+      - name: Import db
+        run: source ./apps/ci/ci-import-db.sh
       - name: Build
         run: source ./apps/ci/ci-compile.sh
       - name: Dry run
