--- a/.github/workflows/core-build.yml
+++ b/.github/workflows/core-build.yml
@@ -45,3 +45,5 @@ jobs:
         run: source ./apps/ci/ci-worldserver-dry-run.sh
       - name: Check startup errors
         run: source ./apps/ci/ci-error-check.sh
+      - name: Run unit tests
+        run: source ./apps/ci/ci-run-unit-tests.sh
