feat(Misc): update to new standards (#4)

--- a/.github/workflows/core-build.yml
+++ b/.github/workflows/core-build.yml
@@ -22,11 +22,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
-          path: 'modules/skeleton-module'
+          path: 'modules/mod-server-auto-shutdown'
       - name: Cache
         uses: actions/cache@v2
         with:
-          path: /home/runner/.ccache
+          path: var/ccache
           key: ccache:${{ matrix.compiler }}:${{ github.ref }}:${{ github.sha }}
           restore-keys: |
             ccache:${{ matrix.compiler }}:${{ github.ref }}
