Fix time message format (#19)

--- a/conf/ServerAutoShutdown.conf.dist
+++ b/conf/ServerAutoShutdown.conf.dist
@@ -45,7 +45,7 @@ ServerAutoShutdown.PreAnnounce.Seconds = 3600
 #        Default:     "[SERVER]: Automated (quick) server restart in %s"
 #
 
-ServerAutoShutdown.PreAnnounce.Message = "[SERVER]: Automated (quick) server restart in %s"
+ServerAutoShutdown.PreAnnounce.Message = "[SERVER]: Automated (quick) server restart in {}"
 
 #
 #    ServerAutoShutdown.StartEvents
