Also change default description message (#20)

--- a/conf/ServerAutoShutdown.conf.dist
+++ b/conf/ServerAutoShutdown.conf.dist
@@ -42,7 +42,7 @@ ServerAutoShutdown.PreAnnounce.Seconds = 3600
 #
 #    ServerAutoShutdown.PreAnnounce.Message
 #        Description: An announcement to be broadcasted in-game
-#        Default:     "[SERVER]: Automated (quick) server restart in %s"
+#        Default:     "[SERVER]: Automated (quick) server restart in {}"
 #
 
 ServerAutoShutdown.PreAnnounce.Message = "[SERVER]: Automated (quick) server restart in {}"
